# CPPlotLib

./: .gitignore  CMakeLists.txt  Config.cmake.in  pre_build.py  readme.md
example/: CMakeLists.txt
example/qml/: main.qml
example/src/: image_provider.cpp  main.cpp
include/: barplot.hpp  cpplot.hpp  figure.hpp  image_provider.hpp  lineplot.hpp  plot.hpp  python_wrapper.hpp  scatterplot.hpp
include/cpplotlib/: figure.hpp  pieplot.hpp  scatterplot.hpp
qml/: main.qml
scripts/: script.py
src/: barplot.cpp  cpplot.cpp  figure.cpp  image_provider.cpp  lineplot.cpp  main.cpp  plot.cpp  python_wrapper.cpp  scatterplot.cpp
